// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentContainer Delete button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_created": 1000,
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  deleteComment={[MockFunction]}
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <_default
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu dropdown comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          data-toggle="dropdown"
        >
          <Icon
            className="align-middle"
            name="more_vert"
          >
            <i
              className="material-icons material-icons-more_vert align-middle "
              onClick={[Function]}
            >
              more_vert
            </i>
          </Icon>
        </div>
        <div
          className="dropdown-menu dropdown-menu-right"
        >
          <ContextMenuAction
            icon="edit"
            onClick={[Function]}
            title="Rediger kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  className="material-icons material-icons-edit align-middle mr-2 "
                  onClick={[Function]}
                >
                  edit
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Rediger kommentar
              </span>
            </div>
          </ContextMenuAction>
          <ContextMenuAction
            icon="delete"
            onClick={[Function]}
            title="Slet kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="delete"
              >
                <i
                  className="material-icons material-icons-delete align-middle mr-2 "
                  onClick={[Function]}
                >
                  delete
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Slet kommentar
              </span>
            </div>
          </ContextMenuAction>
        </div>
      </div>
    </_default>
    <div
      className="d-flex align-items-center mb-3 w-100"
    >
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment d-flex"
        >
          <ProfileImage
            size="40"
            style={
              Object {
                "marginRight": "15px",
                "marginTop": "10px",
              }
            }
            user={
              Object {
                "name": "Benny Cosmos",
                "openplatformId": "1234",
              }
            }
          >
            <div
              className="profile-card d-flex flex-column "
            >
              <span
                className="profile-image text-center small round align-self-center"
                style={
                  Object {
                    "flexShrink": 0,
                    "height": "40px",
                    "lineHeight": "74px",
                    "marginRight": "15px",
                    "marginTop": "10px",
                    "width": "40px",
                  }
                }
              >
                <Icon
                  name="face"
                  style={
                    Object {
                      "backgroundColor": "#e9eaeb",
                      "borderRadius": "50%",
                      "display": "block",
                      "fontSize": "26px",
                      "height": "40px",
                      "lineHeight": "40px",
                      "width": "40px",
                    }
                  }
                >
                  <i
                    className="material-icons material-icons-face  "
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#e9eaeb",
                        "borderRadius": "50%",
                        "display": "block",
                        "fontSize": "26px",
                        "height": "40px",
                        "lineHeight": "40px",
                        "width": "40px",
                      }
                    }
                  >
                    face
                  </i>
                </Icon>
              </span>
            </div>
          </ProfileImage>
          <div
            className="d-flex flex-column w-100"
          >
            <Text
              className="mb-1"
              type="small"
              variant="color-due"
            >
              <p
                className="mb-1 Text Text__small Text__small--color-due"
              >
                1. januar 1970
              </p>
            </Text>
            <div
              className="comment-nameComment-wrap"
            >
              <Text
                className="d-inline"
                type="large"
              >
                <span
                  className="d-inline Text Text__large "
                >
                  Benny Cosmos
                </span>
              </Text>
              <div
                className="d-inline ml-2"
              >
                comment_test
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Edit button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_created": 1000,
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <_default
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu dropdown comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          data-toggle="dropdown"
        >
          <Icon
            className="align-middle"
            name="more_vert"
          >
            <i
              className="material-icons material-icons-more_vert align-middle "
              onClick={[Function]}
            >
              more_vert
            </i>
          </Icon>
        </div>
        <div
          className="dropdown-menu dropdown-menu-right"
        >
          <ContextMenuAction
            icon="edit"
            onClick={[Function]}
            title="Rediger kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  className="material-icons material-icons-edit align-middle mr-2 "
                  onClick={[Function]}
                >
                  edit
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Rediger kommentar
              </span>
            </div>
          </ContextMenuAction>
          <ContextMenuAction
            icon="delete"
            onClick={[Function]}
            title="Slet kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="delete"
              >
                <i
                  className="material-icons material-icons-delete align-middle mr-2 "
                  onClick={[Function]}
                >
                  delete
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Slet kommentar
              </span>
            </div>
          </ContextMenuAction>
        </div>
      </div>
    </_default>
    <div
      className="d-flex align-items-center mb-3 w-100"
    >
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment d-flex"
        >
          <ProfileImage
            size="40"
            style={
              Object {
                "marginRight": "15px",
                "marginTop": "10px",
              }
            }
            user={
              Object {
                "name": "Benny Cosmos",
                "openplatformId": "1234",
              }
            }
          >
            <div
              className="profile-card d-flex flex-column "
            >
              <span
                className="profile-image text-center small round align-self-center"
                style={
                  Object {
                    "flexShrink": 0,
                    "height": "40px",
                    "lineHeight": "74px",
                    "marginRight": "15px",
                    "marginTop": "10px",
                    "width": "40px",
                  }
                }
              >
                <Icon
                  name="face"
                  style={
                    Object {
                      "backgroundColor": "#e9eaeb",
                      "borderRadius": "50%",
                      "display": "block",
                      "fontSize": "26px",
                      "height": "40px",
                      "lineHeight": "40px",
                      "width": "40px",
                    }
                  }
                >
                  <i
                    className="material-icons material-icons-face  "
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#e9eaeb",
                        "borderRadius": "50%",
                        "display": "block",
                        "fontSize": "26px",
                        "height": "40px",
                        "lineHeight": "40px",
                        "width": "40px",
                      }
                    }
                  >
                    face
                  </i>
                </Icon>
              </span>
            </div>
          </ProfileImage>
          <div
            className="d-flex flex-column w-100"
          >
            <Text
              className="mb-1"
              type="small"
              variant="color-due"
            >
              <p
                className="mb-1 Text Text__small Text__small--color-due"
              >
                1. januar 1970
              </p>
            </Text>
            <div
              className="comment-nameComment-wrap"
            >
              <Text
                className="d-inline"
                type="large"
              >
                <span
                  className="d-inline Text Text__large "
                >
                  Benny Cosmos
                </span>
              </Text>
              <div
                className="d-inline ml-2"
              >
                comment_test
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Edit button 2`] = `
<CommentWrapper
  comment={
    Object {
      "_created": 1000,
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <_default
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu dropdown comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          data-toggle="dropdown"
        >
          <Icon
            className="align-middle"
            name="more_vert"
          >
            <i
              className="material-icons material-icons-more_vert align-middle "
              onClick={[Function]}
            >
              more_vert
            </i>
          </Icon>
        </div>
        <div
          className="dropdown-menu dropdown-menu-right"
        >
          <ContextMenuAction
            icon="edit"
            onClick={[Function]}
            title="Rediger kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  className="material-icons material-icons-edit align-middle mr-2 "
                  onClick={[Function]}
                >
                  edit
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Rediger kommentar
              </span>
            </div>
          </ContextMenuAction>
          <ContextMenuAction
            icon="delete"
            onClick={[Function]}
            title="Slet kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="delete"
              >
                <i
                  className="material-icons material-icons-delete align-middle mr-2 "
                  onClick={[Function]}
                >
                  delete
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Slet kommentar
              </span>
            </div>
          </ContextMenuAction>
        </div>
      </div>
    </_default>
    <div
      className="d-flex align-items-center mb-3 w-100"
    >
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <CommentInput
          autoFocus={true}
          editing={true}
          error={null}
          onCancel={[Function]}
          onChange={[Function]}
          onDelete={[Function]}
          onSubmit={[Function]}
          user={
            Object {
              "name": "Benny Cosmos",
              "openplatformId": "1234",
            }
          }
          value="comment_test"
        >
          <div
            className="comment-textarea-wrap mb-3 d-flex "
            style={
              Object {
                "marginTop": "10px",
              }
            }
          >
            <ProfileImage
              size="40"
              style={
                Object {
                  "marginRight": "15px",
                }
              }
              user={
                Object {
                  "name": "Benny Cosmos",
                  "openplatformId": "1234",
                }
              }
            >
              <div
                className="profile-card d-flex flex-column "
              >
                <span
                  className="profile-image text-center small round align-self-center"
                  style={
                    Object {
                      "flexShrink": 0,
                      "height": "40px",
                      "lineHeight": "74px",
                      "marginRight": "15px",
                      "width": "40px",
                    }
                  }
                >
                  <Icon
                    name="face"
                    style={
                      Object {
                        "backgroundColor": "#e9eaeb",
                        "borderRadius": "50%",
                        "display": "block",
                        "fontSize": "26px",
                        "height": "40px",
                        "lineHeight": "40px",
                        "width": "40px",
                      }
                    }
                  >
                    <i
                      className="material-icons material-icons-face  "
                      onClick={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#e9eaeb",
                          "borderRadius": "50%",
                          "display": "block",
                          "fontSize": "26px",
                          "height": "40px",
                          "lineHeight": "40px",
                          "width": "40px",
                        }
                      }
                    >
                      face
                    </i>
                  </Icon>
                </span>
              </div>
            </ProfileImage>
            <div
              className="d-flex flex-wrap align-items-center w-100 "
              onBlur={[Function]}
              onFocus={[Function]}
            >
              <div
                className="d-flex w-100"
                style={
                  Object {
                    "border": "1px solid #E9EAEB",
                    "overflow": "hidden",
                  }
                }
              >
                <textarea
                  autoFocus={true}
                  className="comment-textarea border-0 pl-3"
                  name="list-description"
                  onChange={[Function]}
                  placeholder="Din kommentar ..."
                  value="comment_test"
                />
                <Icon
                  className="comment-submit-icon align-self-end"
                  id="comment-submit"
                  name="check"
                  onClick={[Function]}
                >
                  <i
                    className="material-icons material-icons-check comment-submit-icon align-self-end "
                    id="comment-submit"
                    onClick={[Function]}
                  >
                    check
                  </i>
                </Icon>
              </div>
            </div>
          </div>
        </CommentInput>
      </div>
    </div>
  </div>
</CommentWrapper>
`;

exports[`CommentContainer Render comment 1`] = `
<div
  className="comment-wrapper"
>
  
  <div
    className="d-flex align-items-center mb-3 w-100"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="comment d-flex"
      >
        <div
          className="profile-card d-flex flex-column "
        >
          <span
            className="profile-image text-center small round align-self-center"
            style={
              Object {
                "flexShrink": 0,
                "height": "40px",
                "lineHeight": "74px",
                "marginRight": "15px",
                "marginTop": "10px",
                "width": "40px",
              }
            }
          >
            <i
              className="material-icons material-icons-face  "
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "26px",
                  "height": "40px",
                  "lineHeight": "40px",
                  "width": "40px",
                }
              }
            >
              face
            </i>
          </span>
          
        </div>
        <div
          className="d-flex flex-column w-100"
        >
          <p
            className="mb-1 Text Text__small Text__small--color-due"
          >
            1. januar 1970
          </p>
          <div
            className="comment-nameComment-wrap"
          >
            <span
              className="d-inline Text Text__large "
            >
              Benny Cosmos
            </span>
            <div
              className="d-inline ml-2"
            >
              comment_test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CommentContainer Render edit form 1`] = `
<div
  className="comment-wrapper"
>
  
  <div
    className="ContextMenu dropdown comment-wrapper-context-menu"
  >
    <div
      className="dropdown-toggle"
      data-toggle="dropdown"
    >
      <i
        className="material-icons material-icons-more_vert align-middle "
        onClick={[Function]}
      >
        more_vert
      </i>
      
    </div>
    <div
      className="dropdown-menu dropdown-menu-right"
    >
      <div
        className="dropdown-item"
        data-cy="context-menu-action"
        onClick={[Function]}
      >
        <i
          className="material-icons material-icons-edit align-middle mr-2 "
          onClick={[Function]}
        >
          edit
        </i>
        <span
          className="align-middle"
        >
          Rediger kommentar
        </span>
      </div>
      <div
        className="dropdown-item"
        data-cy="context-menu-action"
        onClick={[Function]}
      >
        <i
          className="material-icons material-icons-delete align-middle mr-2 "
          onClick={[Function]}
        >
          delete
        </i>
        <span
          className="align-middle"
        >
          Slet kommentar
        </span>
      </div>
    </div>
  </div>
  <div
    className="d-flex align-items-center mb-3 w-100"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="comment d-flex"
      >
        <div
          className="profile-card d-flex flex-column "
        >
          <span
            className="profile-image text-center small round align-self-center"
            style={
              Object {
                "flexShrink": 0,
                "height": "40px",
                "lineHeight": "74px",
                "marginRight": "15px",
                "marginTop": "10px",
                "width": "40px",
              }
            }
          >
            <i
              className="material-icons material-icons-face  "
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "26px",
                  "height": "40px",
                  "lineHeight": "40px",
                  "width": "40px",
                }
              }
            >
              face
            </i>
          </span>
          
        </div>
        <div
          className="d-flex flex-column w-100"
        >
          <p
            className="mb-1 Text Text__small Text__small--color-due"
          >
            1. januar 1970
          </p>
          <div
            className="comment-nameComment-wrap"
          >
            <span
              className="d-inline Text Text__large "
            >
              Benny Cosmos
            </span>
            <div
              className="d-inline ml-2"
            >
              comment_test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CommentContainer Render save form 1`] = `
<div
  className="comment-wrapper"
>
  <div
    className="comment-saving"
  >
    <span
      className="spinner "
      style={
        Object {
          "borderBottomColor": "transparent",
          "borderColor": "var(--deYork)",
          "borderTopColor": null,
          "display": "inline-block",
          "height": "30px",
          "width": "30px",
        }
      }
    />
  </div>
  <div
    className="ContextMenu dropdown comment-wrapper-context-menu"
  >
    <div
      className="dropdown-toggle"
      data-toggle="dropdown"
    >
      <i
        className="material-icons material-icons-more_vert align-middle "
        onClick={[Function]}
      >
        more_vert
      </i>
      
    </div>
    <div
      className="dropdown-menu dropdown-menu-right"
    >
      <div
        className="dropdown-item"
        data-cy="context-menu-action"
        onClick={[Function]}
      >
        <i
          className="material-icons material-icons-edit align-middle mr-2 "
          onClick={[Function]}
        >
          edit
        </i>
        <span
          className="align-middle"
        >
          Rediger kommentar
        </span>
      </div>
      <div
        className="dropdown-item"
        data-cy="context-menu-action"
        onClick={[Function]}
      >
        <i
          className="material-icons material-icons-delete align-middle mr-2 "
          onClick={[Function]}
        >
          delete
        </i>
        <span
          className="align-middle"
        >
          Slet kommentar
        </span>
      </div>
    </div>
  </div>
  <div
    className="d-flex align-items-center mb-3 w-100"
  >
    <div
      style={
        Object {
          "flexGrow": 1,
        }
      }
    >
      <div
        className="comment d-flex"
      >
        <div
          className="profile-card d-flex flex-column "
        >
          <span
            className="profile-image text-center small round align-self-center"
            style={
              Object {
                "flexShrink": 0,
                "height": "40px",
                "lineHeight": "74px",
                "marginRight": "15px",
                "marginTop": "10px",
                "width": "40px",
              }
            }
          >
            <i
              className="material-icons material-icons-face  "
              onClick={[Function]}
              style={
                Object {
                  "backgroundColor": "#e9eaeb",
                  "borderRadius": "50%",
                  "display": "block",
                  "fontSize": "26px",
                  "height": "40px",
                  "lineHeight": "40px",
                  "width": "40px",
                }
              }
            >
              face
            </i>
          </span>
          
        </div>
        <div
          className="d-flex flex-column w-100"
        >
          <p
            className="mb-1 Text Text__small Text__small--color-due"
          >
            1. januar 1970
          </p>
          <div
            className="comment-nameComment-wrap"
          >
            <span
              className="d-inline Text Text__large "
            >
              Benny Cosmos
            </span>
            <div
              className="d-inline ml-2"
            >
              comment_test
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CommentContainer Save button 1`] = `
<CommentWrapper
  comment={
    Object {
      "_created": 1000,
      "_id": "test",
      "comment": "comment_test",
      "user": Object {
        "name": "Benny Cosmos",
        "openplatformId": "1234",
      },
    }
  }
  editComment={[MockFunction]}
  toggleEdit={[MockFunction]}
  user={
    Object {
      "name": "Benny Cosmos",
      "openplatformId": "1234",
    }
  }
>
  <div
    className="comment-wrapper"
    key="test"
  >
    <_default
      className="comment-wrapper-context-menu"
    >
      <div
        className="ContextMenu dropdown comment-wrapper-context-menu"
      >
        <div
          className="dropdown-toggle"
          data-toggle="dropdown"
        >
          <Icon
            className="align-middle"
            name="more_vert"
          >
            <i
              className="material-icons material-icons-more_vert align-middle "
              onClick={[Function]}
            >
              more_vert
            </i>
          </Icon>
        </div>
        <div
          className="dropdown-menu dropdown-menu-right"
        >
          <ContextMenuAction
            icon="edit"
            onClick={[Function]}
            title="Rediger kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="edit"
              >
                <i
                  className="material-icons material-icons-edit align-middle mr-2 "
                  onClick={[Function]}
                >
                  edit
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Rediger kommentar
              </span>
            </div>
          </ContextMenuAction>
          <ContextMenuAction
            icon="delete"
            onClick={[Function]}
            title="Slet kommentar"
          >
            <div
              className="dropdown-item"
              data-cy="context-menu-action"
              onClick={[Function]}
            >
              <Icon
                className="align-middle mr-2"
                name="delete"
              >
                <i
                  className="material-icons material-icons-delete align-middle mr-2 "
                  onClick={[Function]}
                >
                  delete
                </i>
              </Icon>
              <span
                className="align-middle"
              >
                Slet kommentar
              </span>
            </div>
          </ContextMenuAction>
        </div>
      </div>
    </_default>
    <div
      className="d-flex align-items-center mb-3 w-100"
    >
      <div
        style={
          Object {
            "flexGrow": 1,
          }
        }
      >
        <div
          className="comment d-flex"
        >
          <ProfileImage
            size="40"
            style={
              Object {
                "marginRight": "15px",
                "marginTop": "10px",
              }
            }
            user={
              Object {
                "name": "Benny Cosmos",
                "openplatformId": "1234",
              }
            }
          >
            <div
              className="profile-card d-flex flex-column "
            >
              <span
                className="profile-image text-center small round align-self-center"
                style={
                  Object {
                    "flexShrink": 0,
                    "height": "40px",
                    "lineHeight": "74px",
                    "marginRight": "15px",
                    "marginTop": "10px",
                    "width": "40px",
                  }
                }
              >
                <Icon
                  name="face"
                  style={
                    Object {
                      "backgroundColor": "#e9eaeb",
                      "borderRadius": "50%",
                      "display": "block",
                      "fontSize": "26px",
                      "height": "40px",
                      "lineHeight": "40px",
                      "width": "40px",
                    }
                  }
                >
                  <i
                    className="material-icons material-icons-face  "
                    onClick={[Function]}
                    style={
                      Object {
                        "backgroundColor": "#e9eaeb",
                        "borderRadius": "50%",
                        "display": "block",
                        "fontSize": "26px",
                        "height": "40px",
                        "lineHeight": "40px",
                        "width": "40px",
                      }
                    }
                  >
                    face
                  </i>
                </Icon>
              </span>
            </div>
          </ProfileImage>
          <div
            className="d-flex flex-column w-100"
          >
            <Text
              className="mb-1"
              type="small"
              variant="color-due"
            >
              <p
                className="mb-1 Text Text__small Text__small--color-due"
              >
                1. januar 1970
              </p>
            </Text>
            <div
              className="comment-nameComment-wrap"
            >
              <Text
                className="d-inline"
                type="large"
              >
                <span
                  className="d-inline Text Text__large "
                >
                  Benny Cosmos
                </span>
              </Text>
              <div
                className="d-inline ml-2"
              >
                comment_test
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</CommentWrapper>
`;
